hphp/hack/test/typecheck/reactive/test_local_reactive2.php.exp
File "test_local_reactive2.php", line 9, characters 3-8:
Reactive functions can only call other reactive functions. (Typing[4200])
File "test_local_reactive2.php", line 4, characters 10-13:
This function is local reactive.
